@@ -384,8 +384,8 @@ libtoolize: copying file 'build-aux/config.sub'
 libtoolize: copying file 'build-aux/install-sh'
 libtoolize: copying file 'build-aux/ltmain.sh'
 libtoolize: putting macros in AC_CONFIG_MACRO_DIRS, 'm4'.
-libtoolize: copying file 'm4/argz.m4'
 libtoolize: copying file 'm4/libtool.m4'
+libtoolize: copying file 'm4/ltargz.m4'
 libtoolize: copying file 'm4/ltdl.m4'
 libtoolize: copying file 'm4/ltoptions.m4'
 libtoolize: copying file 'm4/ltsugar.m4'
@@ -394,9 +394,8 @@ libtoolize: copying file 'm4/lt~obsolete.m4'
 libtoolize: putting libltdl files in 'ltdl'.
 libtoolize: copying file 'ltdl/COPYING.LIB'
 libtoolize: copying file 'ltdl/README'
-libtoolize: copying file 'ltdl/argz_.h'
-libtoolize: copying file 'ltdl/argz.c'
 libtoolize: copying file 'ltdl/libltdl/lt__alloc.h'
+libtoolize: copying file 'ltdl/libltdl/lt__argz_.h'
 libtoolize: copying file 'ltdl/libltdl/lt__dirent.h'
 libtoolize: copying file 'ltdl/libltdl/lt__glibc.h'
 libtoolize: copying file 'ltdl/libltdl/lt__private.h'
@@ -413,6 +412,7 @@ libtoolize: copying file 'ltdl/loaders/loadlibrary.c'
 libtoolize: copying file 'ltdl/loaders/preopen.c'
 libtoolize: copying file 'ltdl/loaders/shl_load.c'
 libtoolize: copying file 'ltdl/lt__alloc.c'
+libtoolize: copying file 'ltdl/lt__argz.c'
 libtoolize: copying file 'ltdl/lt__dirent.c'
 libtoolize: copying file 'ltdl/lt__strl.c'
 libtoolize: copying file 'ltdl/lt_dlloader.c'
@@ -457,8 +457,8 @@ libtoolize: linking file 'build-aux/install-sh'
 libtoolize: linking file 'build-aux/missing'
 libtoolize: linking file 'build-aux/ltmain.sh'
 libtoolize: putting macros in AC_CONFIG_MACRO_DIRS, 'm4'.
-libtoolize: linking file 'm4/argz.m4'
 libtoolize: linking file 'm4/libtool.m4'
+libtoolize: linking file 'm4/ltargz.m4'
 libtoolize: linking file 'm4/ltdl.m4'
 libtoolize: linking file 'm4/ltoptions.m4'
 libtoolize: linking file 'm4/ltsugar.m4'
@@ -471,11 +471,10 @@ libtoolize: linking file 'ltdl/Makefile.in'
 libtoolize: linking file 'ltdl/README'
 libtoolize: linking file 'ltdl/configure.ac'
 libtoolize: copying file 'ltdl/aclocal.m4'
-libtoolize: linking file 'ltdl/argz_.h'
-libtoolize: linking file 'ltdl/argz.c'
 libtoolize: linking file 'ltdl/config-h.in'
 libtoolize: copying file 'ltdl/configure'
 libtoolize: linking file 'ltdl/libltdl/lt__alloc.h'
+libtoolize: linking file 'ltdl/libltdl/lt__argz_.h'
 libtoolize: linking file 'ltdl/libltdl/lt__dirent.h'
 libtoolize: linking file 'ltdl/libltdl/lt__glibc.h'
 libtoolize: linking file 'ltdl/libltdl/lt__private.h'
@@ -492,6 +491,7 @@ libtoolize: linking file 'ltdl/loaders/loadlibrary.c'
 libtoolize: linking file 'ltdl/loaders/preopen.c'
 libtoolize: linking file 'ltdl/loaders/shl_load.c'
 libtoolize: linking file 'ltdl/lt__alloc.c'
+libtoolize: linking file 'ltdl/lt__argz.c'
 libtoolize: linking file 'ltdl/lt__dirent.c'
 libtoolize: linking file 'ltdl/lt__strl.c'
 libtoolize: linking file 'ltdl/lt_dlloader.c'
@@ -556,8 +556,8 @@ libtoolize: copying file 'build-aux/install-sh'
 libtoolize: copying file 'build-aux/missing'
 libtoolize: copying file 'build-aux/ltmain.sh'
 libtoolize: putting macros in AC_CONFIG_MACRO_DIRS, 'm4'.
-libtoolize: copying file 'm4/argz.m4'
 libtoolize: copying file 'm4/libtool.m4'
+libtoolize: copying file 'm4/ltargz.m4'
 libtoolize: copying file 'm4/ltdl.m4'
 libtoolize: copying file 'm4/ltoptions.m4'
 libtoolize: copying file 'm4/ltsugar.m4'
@@ -570,11 +570,10 @@ libtoolize: copying file 'ltdl/Makefile.in'
 libtoolize: copying file 'ltdl/README'
 libtoolize: copying file 'ltdl/configure.ac'
 libtoolize: copying file 'ltdl/aclocal.m4'
-libtoolize: copying file 'ltdl/argz_.h'
-libtoolize: copying file 'ltdl/argz.c'
 libtoolize: copying file 'ltdl/config-h.in'
 libtoolize: copying file 'ltdl/configure'
 libtoolize: copying file 'ltdl/libltdl/lt__alloc.h'
+libtoolize: copying file 'ltdl/libltdl/lt__argz_.h'
 libtoolize: copying file 'ltdl/libltdl/lt__dirent.h'
 libtoolize: copying file 'ltdl/libltdl/lt__glibc.h'
 libtoolize: copying file 'ltdl/libltdl/lt__private.h'
@@ -591,6 +590,7 @@ libtoolize: copying file 'ltdl/loaders/loadlibrary.c'
 libtoolize: copying file 'ltdl/loaders/preopen.c'
 libtoolize: copying file 'ltdl/loaders/shl_load.c'
 libtoolize: copying file 'ltdl/lt__alloc.c'
+libtoolize: copying file 'ltdl/lt__argz.c'
 libtoolize: copying file 'ltdl/lt__dirent.c'
 libtoolize: copying file 'ltdl/lt__strl.c'
 libtoolize: copying file 'ltdl/lt_dlloader.c'
@@ -883,8 +883,8 @@ libtoolize: copying file 'build-aux/config.sub'
 libtoolize: copying file 'build-aux/install-sh'
 libtoolize: copying file 'build-aux/ltmain.sh'
 libtoolize: putting macros in AC_CONFIG_MACRO_DIRS, 'm4'.
-libtoolize: copying file 'm4/argz.m4'
 libtoolize: copying file 'm4/libtool.m4'
+libtoolize: copying file 'm4/ltargz.m4'
 libtoolize: copying file 'm4/ltdl.m4'
 libtoolize: copying file 'm4/ltoptions.m4'
 libtoolize: copying file 'm4/ltsugar.m4'
@@ -893,9 +893,8 @@ libtoolize: copying file 'm4/lt~obsolete.m4'
 libtoolize: putting libltdl files in LT_CONFIG_LTDL_DIR, 'ltdl'.
 libtoolize: copying file 'ltdl/COPYING.LIB'
 libtoolize: copying file 'ltdl/README'
-libtoolize: copying file 'ltdl/argz_.h'
-libtoolize: copying file 'ltdl/argz.c'
 libtoolize: copying file 'ltdl/libltdl/lt__alloc.h'
+libtoolize: copying file 'ltdl/libltdl/lt__argz_.h'
 libtoolize: copying file 'ltdl/libltdl/lt__dirent.h'
 libtoolize: copying file 'ltdl/libltdl/lt__glibc.h'
 libtoolize: copying file 'ltdl/libltdl/lt__private.h'
@@ -912,6 +911,7 @@ libtoolize: copying file 'ltdl/loaders/loadlibrary.c'
 libtoolize: copying file 'ltdl/loaders/preopen.c'
 libtoolize: copying file 'ltdl/loaders/shl_load.c'
 libtoolize: copying file 'ltdl/lt__alloc.c'
+libtoolize: copying file 'ltdl/lt__argz.c'
 libtoolize: copying file 'ltdl/lt__dirent.c'
 libtoolize: copying file 'ltdl/lt__strl.c'
 libtoolize: copying file 'ltdl/lt_dlloader.c'
@@ -957,8 +957,8 @@ libtoolize: copying file 'acaux/install-sh'
 libtoolize: copying file 'acaux/missing'
 libtoolize: copying file 'acaux/ltmain.sh'
 libtoolize: putting macros in AC_CONFIG_MACRO_DIRS, 'acm4'.
-libtoolize: copying file 'acm4/argz.m4'
 libtoolize: copying file 'acm4/libtool.m4'
+libtoolize: copying file 'acm4/ltargz.m4'
 libtoolize: copying file 'acm4/ltdl.m4'
 libtoolize: copying file 'acm4/ltoptions.m4'
 libtoolize: copying file 'acm4/ltsugar.m4'
@@ -971,11 +971,10 @@ libtoolize: creating file 'ltdl/Makefile.in'
 libtoolize: copying file 'ltdl/README'
 libtoolize: creating file 'ltdl/configure.ac'
 libtoolize: creating file 'ltdl/aclocal.m4'
-libtoolize: copying file 'ltdl/argz_.h'
-libtoolize: copying file 'ltdl/argz.c'
 libtoolize: copying file 'ltdl/config-h.in'
 libtoolize: creating file 'ltdl/configure'
 libtoolize: copying file 'ltdl/libltdl/lt__alloc.h'
+libtoolize: copying file 'ltdl/libltdl/lt__argz_.h'
 libtoolize: copying file 'ltdl/libltdl/lt__dirent.h'
 libtoolize: copying file 'ltdl/libltdl/lt__glibc.h'
 libtoolize: copying file 'ltdl/libltdl/lt__private.h'
@@ -992,6 +991,7 @@ libtoolize: copying file 'ltdl/loaders/loadlibrary.c'
 libtoolize: copying file 'ltdl/loaders/preopen.c'
 libtoolize: copying file 'ltdl/loaders/shl_load.c'
 libtoolize: copying file 'ltdl/lt__alloc.c'
+libtoolize: copying file 'ltdl/lt__argz.c'
 libtoolize: copying file 'ltdl/lt__dirent.c'
 libtoolize: copying file 'ltdl/lt__strl.c'
 libtoolize: copying file 'ltdl/lt_dlloader.c'
@@ -1033,8 +1033,8 @@ libtoolize: linking file 'ltdl/install-sh'
 libtoolize: linking file 'ltdl/missing'
 libtoolize: linking file 'ltdl/ltmain.sh'
 libtoolize: putting macros in 'ltdl/m4'.
-libtoolize: linking file 'ltdl/m4/argz.m4'
 libtoolize: linking file 'ltdl/m4/libtool.m4'
+libtoolize: linking file 'ltdl/m4/ltargz.m4'
 libtoolize: linking file 'ltdl/m4/ltdl.m4'
 libtoolize: linking file 'ltdl/m4/ltoptions.m4'
 libtoolize: linking file 'ltdl/m4/ltsugar.m4'
@@ -1047,11 +1047,10 @@ libtoolize: creating file 'ltdl/Makefile.in'
 libtoolize: linking file 'ltdl/README'
 libtoolize: creating file 'ltdl/configure.ac'
 libtoolize: creating file 'ltdl/aclocal.m4'
-libtoolize: linking file 'ltdl/argz_.h'
-libtoolize: linking file 'ltdl/argz.c'
 libtoolize: linking file 'ltdl/config-h.in'
 libtoolize: creating file 'ltdl/configure'
 libtoolize: linking file 'ltdl/libltdl/lt__alloc.h'
+libtoolize: linking file 'ltdl/libltdl/lt__argz_.h'
 libtoolize: linking file 'ltdl/libltdl/lt__dirent.h'
 libtoolize: linking file 'ltdl/libltdl/lt__glibc.h'
 libtoolize: linking file 'ltdl/libltdl/lt__private.h'
@@ -1068,6 +1067,7 @@ libtoolize: linking file 'ltdl/loaders/loadlibrary.c'
 libtoolize: linking file 'ltdl/loaders/preopen.c'
 libtoolize: linking file 'ltdl/loaders/shl_load.c'
 libtoolize: linking file 'ltdl/lt__alloc.c'
+libtoolize: linking file 'ltdl/lt__argz.c'
 libtoolize: linking file 'ltdl/lt__dirent.c'
 libtoolize: linking file 'ltdl/lt__strl.c'
 libtoolize: linking file 'ltdl/lt_dlloader.c'
