@@ -27,9 +27,9 @@ AT_KEYWORDS([libltdl])
 
 # Ensure that no symbols from argz are unrenamed.
 eval `$LIBTOOL --config | $EGREP '^(NM|global_symbol_pipe|objext)='`
-argz_o=$abs_top_builddir/libltdl/argz.$objext
-AT_CHECK([test -f "$argz_o" || exit 77])
-AT_CHECK([eval "$NM \"\$argz_o\" | $global_symbol_pipe"],
+lt__argz_o=$abs_top_builddir/libltdl/lt__argz.$objext
+AT_CHECK([test -f "$lt__argz_o" || exit 77])
+AT_CHECK([eval "$NM \"\$lt__argz_o\" | $global_symbol_pipe"],
 	 [], [stdout], [ignore])
 # Check for global symbols beginning with "argz_"
 AT_CHECK([$GREP "^T argz_" stdout], [1])
