@@ -82,8 +82,8 @@ libtoolize: linking file './config.sub'
 libtoolize: linking file './install-sh'
 libtoolize: linking file './ltmain.sh'
 libtoolize: putting macros in AC_CONFIG_MACRO_DIRS, 'm4'.
-libtoolize: linking file 'm4/argz.m4'
 libtoolize: linking file 'm4/libtool.m4'
+libtoolize: linking file 'm4/ltargz.m4'
 libtoolize: linking file 'm4/ltdl.m4'
 libtoolize: linking file 'm4/ltoptions.m4'
 libtoolize: linking file 'm4/ltsugar.m4'
@@ -92,9 +92,8 @@ libtoolize: linking file 'm4/lt~obsolete.m4'
 libtoolize: putting libltdl files in LT_CONFIG_LTDL_DIR, 'ltdl'.
 libtoolize: linking file 'ltdl/COPYING.LIB'
 libtoolize: linking file 'ltdl/README'
-libtoolize: linking file 'ltdl/argz_.h'
-libtoolize: linking file 'ltdl/argz.c'
 libtoolize: linking file 'ltdl/libltdl/lt__alloc.h'
+libtoolize: linking file 'ltdl/libltdl/lt__argz_.h'
 libtoolize: linking file 'ltdl/libltdl/lt__dirent.h'
 libtoolize: linking file 'ltdl/libltdl/lt__glibc.h'
 libtoolize: linking file 'ltdl/libltdl/lt__private.h'
@@ -111,6 +110,7 @@ libtoolize: linking file 'ltdl/loaders/loadlibrary.c'
 libtoolize: linking file 'ltdl/loaders/preopen.c'
 libtoolize: linking file 'ltdl/loaders/shl_load.c'
 libtoolize: linking file 'ltdl/lt__alloc.c'
+libtoolize: linking file 'ltdl/lt__argz.c'
 libtoolize: linking file 'ltdl/lt__dirent.c'
 libtoolize: linking file 'ltdl/lt__strl.c'
 libtoolize: linking file 'ltdl/lt_dlloader.c'
